--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <select id="method">
             <option value="raw">RAW</option>
             <option value="tls">TLS</option>
-            <option value="flood">Flood</option>
+            <option value="flood">FLOOD</option>
             <option value="h2-fast">H2-FAST</option>
             <option value="h2-mika">H2-MIKA</option>
             <option value="h2-flood">H2-FLOOD</option>
